force-app/main/default/objects/Account_Tax_Number__c/Account_Tax_Number__c.object-meta.xml
<CustomObject>
    <description>Tax Registration Numbers for a Customer to be used for Tax validation when customer transacts in a Country.</description>
    <label>Account Tax Number</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Account Tax Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tax Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>