force-app/main/default/objects/Account_Tax_Number__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Tax Registration for the Account</description>
    <inlineHelpText>Tax Registration for the Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Tax Numbers</relationshipLabel>
    <relationshipName>Account_Tax_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>