force-app/main/default/objects/Account_Tax_Number__c/fields/Account_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Number__c</fullName>
    <description>Account Tax Number Auto number</description>
    <displayFormat>AT-{00000}</displayFormat>
    <inlineHelpText>Account Tax Number Auto number</inlineHelpText>
    <label>Account Tax  Number</label>
    <type>AutoNumber</type>
</CustomField>