force-app/main/default/objects/Account_Tax_Number__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of Registration (if applicable)</description>
    <inlineHelpText>End Date of Registration (if applicable)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>