force-app/main/default/objects/Account_Tax_Number__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of Registration</description>
    <inlineHelpText>Start Date of Registration</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>