force-app/main/default/objects/Account_Tax_Number__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Updated</description>
    <inlineHelpText>Updated</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Validated</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>