force-app/main/default/objects/Account_Tax_Number__c/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <description>Category of Account tax number based on Tax Country</description>
    <label>Tax Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>