force-app/main/default/objects/Account_Tax_Number__c/fields/Tax_Country__c.field-meta.xml
<CustomField>
    <fullName>Tax_Country__c</fullName>
    <description>Country of Tax Registration</description>
    <inlineHelpText>Country of Tax Registration</inlineHelpText>
    <label>Tax Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>