force-app/main/default/objects/Account_Tax_Number__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Tax Registration Number</description>
    <inlineHelpText>Tax Registration Number</inlineHelpText>
    <label>Tax Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>