force-app/main/default/objects/Account_Tax_Number__c/fields/Tax_Number_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number_Name__c</fullName>
    <description>Internal Tax Registration Name</description>
    <inlineHelpText>Internal Tax Registration Name. Description of Tax Registration e.g. Informa UK - German Tax Registration</inlineHelpText>
    <label>Tax Number Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>